--- a/src/locales/zh-CN.po
+++ b/src/locales/zh-CN.po
@@ -1861,7 +1861,7 @@ msgid "To"
 msgstr ""
 
 #: src/pages/SwapV2/index.tsx
-msgid "To (estimated)"
+msgid "To (estimated)在v2"
 msgstr ""
 
 #: src/components/SearchModal/ManageTokens.tsx
